fix: removes bottom margin from video container that was generating whitespace

--- a/css/video.module.css
+++ b/css/video.module.css
@@ -6,7 +6,6 @@
   justify-content: space-between;
   padding-bottom: 200px;
   align-items: center;
-  margin-bottom: 4em;
 }
 
 .videoContainer {
@@ -17,7 +16,6 @@
   align-items: center;
   gap: 8em;
   margin-bottom: 3em;
- 
 }
 .localUser {
   height: 24rem;
